--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                         <span class="text-dark">Coder</span> | Rider | Mountaineer
                     </h2>
                     <p class="mb-10 font-medium leading-relaxed text-secondary">
-                        Belajar programming itu mudah dan menyenangkan bukan.
-                        <span class="font-bold text-red-500">Bukan!</span>
+                        Belajar programming adalah sebuah perjalanan yang tidak mudah, 
+                        <span class="font-bold text-dark">tapi di situlah letak asiknya.</span>
                     </p>
                     <a href="https://wa.me/6288293634298" target="_blank"
                         class="inline-block px-8 py-3 text-base font-semibold text-white transition duration-300 ease-in-out rounded-full bg-primary hover:opacity-80 hover:shadow-lg">
@@ -113,10 +113,10 @@
                     </p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
-                    <h3 class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10">Networking</h3>
-                    <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
-                        Di luar dunia Technology, saya banyak menemukan inspirasi dari perjalanan dan petualangan. Saya percaya kolaborasi adalah kunci untuk menghasilkan karya terbaik.
-                    </p>
+                <h3 class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10">Kolaborasi & Koneksi</h3>
+                <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
+                    Saya percaya project teknologi terbaik tidak dibangun sendirian. Saya selalu antusias untuk terhubung, berbagi ide, dan berkolaborasi dengan orang-orang baru untuk menciptakan solusi yang berdampak nyata di lingkungan sekitar.
+                </p>
                     <div class="flex items-center">
                         <!-- Tiktok -->
                         <a href="https://www.tiktok.com/@rmdhn_1709?is_from_webapp=1&sender_device=pc" target="_blank"
@@ -174,7 +174,9 @@
                 <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
                 <h2 class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl">Project Terbaru</h2>
                 <p class="font-medium text-secondary md:text-lg">
-                    Berikut adalah beberapa project pilihan yang telah saya kerjakan, menunjukkan keahlian saya dalam design UI Web development dan Mobile app. Setiap project adalah cerita tentang pemecahan masalah dilingkungan sekitar kita.
+                    Berikut adalah beberapa project pilihan yang telah saya kerjakan, menunjukkan keahlian saya dalam 
+                    <strong class="text-dark">desain UI, pengembangan web, dan aplikasi mobile.</strong> 
+                    Setiap project adalah cerita tentang pemecahan masalah di lingkungan sekitar.
                 </p>
             </div>
         </div>
@@ -438,7 +440,7 @@
                 <h4 class="mb-2 text-lg font-semibold text-primary">Blog</h4>
                 <h2 class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl">My Activity</h2>
                 <p class="font-medium text-secondary md:text-lg">
-                    Hidup adalah keseimbangan antara memprogram dunia serta diprogram oleh alam. Di bagian ini, saya mendokumentasikan berbagai aktivitas yang membentuk siapa saya, mulai dari project pemrograman hingga jejak perjalanan di atas roda dan berada di puncak tertinggi gunung.
+                    Hidup adalah keseimbangan. Saya mendokumentasikan berbagai aktivitas yang membentuk siapa saya, mulai dari project pemrograman hingga jejak perjalanan di atas roda dan berada di puncak tertinggi gunung.
                 </p>
             </div>
         </div>
@@ -461,7 +463,7 @@
                     </div>
                     <div class="px-6 py-8">
                         <h3><a href="#" class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary">Programming</a></h3>
-                        <p class="mb-6 text-base font-medium text-secondary">Terus mengasah logika dan kreativitas melalui baris-baris kode. Membuat aplikasi web yang responsif, fungsional, dan memberikan solusi nyata.</p>
+                        <p class="mb-6 text-base font-medium text-secondary">Mengasah logika dan kreativitas melalui baris-baris kode. Membuat aplikasi web yang responsif, fungsional, dan memberikan solusi nyata.</p>
                         <a href="#" class="px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80">Lihat Detail</a>
                     </div>
                 </div>
@@ -482,7 +484,7 @@
                     </div>
                     <div class="px-6 py-8">
                         <h3><a href="#" class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary">Hiking</a></h3>
-                        <p class="mb-6 text-base font-medium text-secondary">Menemukan ketenangan dan menantang batas diri di antara jalur pendakian. Setiap puncak menawarkan perspektif baru.</p>
+                        <p class="mb-6 text-base font-medium text-secondary">Menemukan ketenangan dan menantang batas diri di antara jalur pendakian. Setiap gunung memiliki pengalaman dan tantangan yang berbeda.</p>
                         <a href="#" class="px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80">Lihat Galeri</a>
                     </div>
                 </div>
@@ -503,7 +505,7 @@
                     </div>
                     <div class="px-6 py-8">
                         <h3><a href="#" class="block mb-3 text-xl font-semibold truncate text-dark hover:text-primary">Touring</a></h3>
-                        <p class="mb-6 text-base font-medium text-secondary">Menjelajahi keindahan tersembunyi di sepanjang jalanan. Bukan hanya tujuan, tapi tentang setiap momen kebebasan.</p>
+                        <p class="mb-6 text-base font-medium text-secondary">Menjelajahi keindahan tersembunyi di sepanjang perjalanan. Bukan hanya tujuan, tapi tentang setiap momen perjalanan itu sendiri.</p>
                         <a href="#" class="px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary hover:opacity-80">Lihat Rute</a>
                     </div>
                 </div>
