--- a/index.html
+++ b/index.html
@@ -28,25 +28,37 @@
                             <span class="origin-bottom-left hamburger-line"></span>
                         </button>
     
-                        <nav id="nav-menu" class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
+                        <nav id="nav-menu" class="dark:bg-dark lg:dark:bg-transparent dark:shadow-slate-500 hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
                             <ul class="block lg:flex">
                                 <li class="group">
-                                    <a href="#home" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Beranda</a>
+                                    <a href="#home" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Beranda</a>
                                 </li>
                                 <li class="group">
-                                    <a href="#about" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Tentang Saya</a>
+                                    <a href="#about" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Tentang Saya</a>
                                 </li>
                                 <li class="group">
-                                    <a href="#portfolio" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Portfolio</a>
+                                    <a href="#portfolio" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Portfolio</a>
                                 </li>
                                 <li class="group">
-                                    <a href="#clients" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Clients</a>
+                                    <a href="#clients" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Clients</a>
                                 </li>
                                 <li class="group">
-                                    <a href="#blog" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Blog</a>
+                                    <a href="#blog" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Blog</a>
                                 </li>
                                 <li class="group">
-                                    <a href="#contact" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary">Contact</a>
+                                    <a href="#contact" class="flex py-2 mx-8 text-base text-dark group-hover:text-primary dark:text-white">Contact</a>
+                                </li>
+                                <li class="flex items-center pl-8">
+                                    <div class="flex">
+                                        <span class="mr-2 text-sm text-slate-500">light</span>
+                                        <input type="checkbox" class="hidden" id="dark-toggle">
+                                        <label for="dark-toggle">
+                                            <div class="flex items-center h-5 p-1 rounded-full cursor-pointer w-9 bg-slate-500">
+                                                <div class="w-4 h-4 transition duration-300 ease-in-out bg-white rounded-full toggle-circle"></div>
+                                            </div>
+                                        </label>
+                                        <span class="ml-2 text-sm text-slate-500">dark</span>
+                                    </div>
                                 </li>
                             </ul>
                         </nav>
@@ -57,20 +69,20 @@
     <!-- Header End -->
      
     <!-- Hero Section Start -->
-    <section id="home" class="pt-20">
+    <section id="home" class="pt-20 dark:bg-dark">
         <div class="container px-4 mx-auto">
             <div class="flex flex-wrap items-center">
                 <!-- Left -->
                 <div class="w-full px-4 lg:w-1/2 animate-fade-in">
                     <h1 class="text-base font-semibold text-primary md:text-xl">
-                        Hallo, i'm <span class="block mt-1 text-4xl font-bold text-dark">Dani Ramadhan</span>
+                        Hello, i'm <span class="block mt-1 text-4xl font-bold text-dark dark:text-white">Dani Ramadhan</span>
                     </h1>
                     <h2 class="mb-5 text-lg font-medium text-secondary">
-                        <span class="text-dark">Coder</span> | Rider | Mountaineer
+                        <span class="text-dark dark:text-white">Coder</span> | Rider | Mountaineer
                     </h2>
                     <p class="mb-10 font-medium leading-relaxed text-secondary">
                         Belajar programming adalah sebuah perjalanan yang tidak mudah, 
-                        <span class="font-bold text-dark">tapi di situlah letak asiknya.</span>
+                        <span class="font-bold text-dark dark:text-white">tapi di situlah letak asiknya.</span>
                     </p>
                     <a href="https://wa.me/6288293634298" target="_blank"
                         class="inline-block px-8 py-3 text-base font-semibold text-white transition duration-300 ease-in-out rounded-full bg-primary hover:opacity-80 hover:shadow-lg">
@@ -82,12 +94,12 @@
                 <div class="w-full px-4 mt-10 lg:w-1/2 lg:mt-0 animate-fade-in">
                     <div class="relative">
                         <div class="relative max-w-full mx-auto w-fit">
-                            <img src="dist/img/2.png" alt="Dani Ramadhan" class="max-w-full mx-auto">
+                            <img src="dist/img/2.png" alt="Dani Ramadhan" class="relative z-10 max-w-full mx-auto">
                             <div
                                 class="absolute bottom-0 left-0 w-full h-20 rounded-full bg-gradient-to-t from-white to-transparent">
                             </div>
                         </div>
-                        <span class="absolute bottom-0 -translate-x-1/2 -z-10 left-1/2">
+                        <span class="absolute bottom-0 -translate-x-1/2 left-1/2">
                             <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                                 <path fill="#60a5fa"
                                     d="M53.4,-64.5C65.7,-53.4,69.6,-33.2,71.4,-13.9C73.1,5.3,72.7,23.5,63.4,33.6C54,43.7,35.6,45.6,20.1,48.2C4.5,50.9,-8.2,54.3,-24.2,53.9C-40.2,53.6,-59.5,49.5,-69.3,37.6C-79.1,25.6,-79.5,5.8,-72.2,-8.8C-65,-23.4,-50.1,-32.6,-36.8,-43.6C-23.5,-54.5,-11.7,-67.1,4.4,-72.3C20.6,-77.6,41.2,-75.6,53.4,-64.5Z"
