--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@
     <!-- Hero Section End -->
 
     <!-- About Section Start -->
-    <section id="about" class="pb-32 pt-36 animate-fade-in">
+    <section id="about" class="pb-32 pt-36 animate-fade-in dark:bg-dark">
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
                     <h4 class="mb-3 text-lg font-bold uppercase text-primary">About Me</h4>
-                    <h2 class="max-w-md mb-5 text-3xl font-bold text-dark lg:text-4xl">Mengubah Ide Menjadi Solusi Digital yang Interaktif</h2>
+                    <h2 class="max-w-md mb-5 text-3xl font-bold text-dark lg:text-4xl dark:text-white">Mengubah Ide Menjadi Solusi Digital yang Interaktif</h2>
                     <p class="max-w-xl text-base font-medium lg:text-lg text-secondary">
                         Saya seorang Junior Full Stack Developer yang bersemangat dalam menciptakan aplikasi yang fungsional dan intuitif. Saya mampu mengubah desain menjadi kode yang hidup dan responsif.
                     </p>
                 </div>
                 <div class="w-full px-4 lg:w-1/2">
-                <h3 class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10">Kolaborasi & Koneksi</h3>
+                <h3 class="mb-4 text-2xl font-semibold text-dark lg:text-3xl lg:pt-10 dark:text-white">Kolaborasi & Koneksi</h3>
                 <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
                     Saya percaya project teknologi terbaik tidak dibangun sendirian. Saya selalu antusias untuk terhubung, berbagi ide, dan berkolaborasi dengan orang-orang baru untuk menciptakan solusi yang berdampak nyata di lingkungan sekitar.
                 </p>
@@ -179,15 +179,15 @@
     <!-- About Section End -->
 
     <!-- Portfolio Section Start -->
-    <section id="portfolio" class="pb-16 pt-36 bg-slate-100">
+    <section id="portfolio" class="pb-16 pt-36 bg-slate-100 dark:bg-slate-800">
     <div class="container">
         <div class="w-full px-4">
             <div class="max-w-xl mx-auto mb-16 text-center">
                 <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
-                <h2 class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl">Project Terbaru</h2>
+                <h2 class="mb-4 text-3xl font-bold text-dark sm:text-4xl lg:text-5xl dark:text-white">Project Terbaru</h2>
                 <p class="font-medium text-secondary md:text-lg">
                     Berikut adalah beberapa project pilihan yang telah saya kerjakan, menunjukkan keahlian saya dalam 
-                    <strong class="text-dark">desain UI, pengembangan web, dan aplikasi mobile.</strong> 
+                    <strong class="text-dark dark:text-white">desain UI, pengembangan web, dan aplikasi mobile.</strong> 
                     Setiap project adalah cerita tentang pemecahan masalah di lingkungan sekitar.
                 </p>
             </div>
@@ -413,12 +413,12 @@
     <!-- Portfolio Section End -->
 
     <!-- Clients Section Start -->
-    <!-- <section id="clients" class="pb-32 pt-36 bg-slate-800">
+    <section id="clients" class="pb-32 pt-36 bg-slate-800 dark:bg-slate-300">
         <div class="container">
             <div class="w-full p-4">
                 <div class="mx-auto mb-16 text-center">
                     <h4 class="mb-2 font-semibold text-primary">Clients</h4>
-                    <h2 class="mb-4 text-3xl font-bold text-white sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
+                    <h2 class="mb-4 text-3xl font-bold text-white sm:text-4xl lg:text-5xl dark:text-dark">Yang Pernah Bekerjasama</h2>
                     <p class="font-medium text-secondary md:text-lg">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat repellendus praesentium dolores, fuga quaerat pariatur magni est voluptatum, debitis in esse animi dolore adipisci quidem.
                     </p>
@@ -441,7 +441,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Clients Section End -->
 
     <!-- Blog Section Start -->
